modules/ballerina-native/src/test/resources/lang/errors/duplicate-var-try-catch.bal
import ballerina.lang.error;

function testInvalid (){
    try{
        int a = 10;
    } catch (error:error e){
        error:error e = { msg: "test"};
        int b = 10;
    }
}
